Fix arrow spacing

--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -160,7 +160,8 @@ h3:focus .heading-anchor {
   }
 
   &[download]:before {
-    content: '↓ ';
+    content: '↓';
+    margin-right: .5em;
   }
 
   &:hover,
