--- a/src/assets/scss/pages/_post.scss
+++ b/src/assets/scss/pages/_post.scss
@@ -99,7 +99,7 @@
 
       &.read-more:after {
         content: '→';
-        margin-left: .25rem;
+        margin-left: .5em;
       }
     }
 
